Updates to jetty and log4j. Removal of findbugs and jacoco which we haven't used for years. Add a strategy to show only final releases when showing dependency updates available.